# federation-registry-feeder

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  compose-giovanni.yml  crontab  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docker-build.yaml  sonar.yaml
cron-scripts/: cron-job.sh  crontab-script  start.sh
docker/: Dockerfile  compose.yml
examples/: provider1.config.yaml  provider2.config.yaml  provider3.config.yaml
jenkins/: Jenkinsfile  docker.Jenkinsfile  linting.Jenkinsfile  release.Jenkinsfile  tests.Jenkinsfile
json-config-schemas/: federation-registry-config-schema.json  provider-config-schema.json
src/: __init__.py  config.py  core.py  crud.py  exceptions.py  fed_reg.py  fed_reg_conn.py  kafka_conn.py  logger.py  main.py  parser.py  utils.py
src/loaders/: __init__.py  fed_mgr.py  utils.py  yaml_files.py
src/models/: __init__.py  config.py  core.py  federation_registry.py  flavors.py  identity_provider.py  images.py  networks.py  projects.py  provider.py  quotas.py  site_config.py  storageclass.py  yml.py
src/providers/: __init__.py  conn_thread.py  core.py  exceptions.py  k8s.py  openstack.py  opnstk.py
tests/: conftest.py  test_db_updates.py  test_kafka.py  test_kafka_conn.py  test_logger.py  test_main.py  test_settings.py  test_utils.py  utils.py
tests/configs/: invalid_provider.config.yaml  valid_provider.config.yaml
tests/crud/: test_crud.py
tests/fed_reg/: test_crud.py  test_get_updated__regions.py  test_get_updated_idp.py  test_get_updated_resources.py  test_get_updated_services.py  test_merge_components.py  test_project_filter.py  test_update_fed_reg.py  utils.py
tests/openstack/: test_connection.py  test_idp_per_project.py  test_images.py  test_networks.py  test_quotas.py  test_resource_assemble.py  test_services.py
tests/providers/: test_get_proj_res.py  test_get_provider.py  test_idp_per_project.py  test_issuer_update.py  test_project_conf.py  test_project_filter.py  test_region_services_update.py  test_region_update.py
tests/providers/common/: test_conn_thred.py  test_get_auth_method.py  test_get_connection_thread.py  test_get_issuer_matching_project.py  test_get_provider.py  test_get_provider_components.py  (+8 more)
tests/schemas/: test_auth_method.py  test_issuer.py  test_kubernetes.py  test_limits.py  test_net_proxy.py  test_openstack.py  test_per_region_props.py  test_project.py  test_provider.py  test_provider_siblings.py  test_region.py  test_settings.py  test_site_config.py  test_sla.py  test_urls.py  test_user_group.py  utils.py
(+22 files in other folders)
