[tool.poetry]
name = "federation-registry-population-script"
version = "0.1.0"
description = "Python script to populate the Federation Registry app"
authors = ["Giovanni Savarese <giovanni.savarese@ba.infn.it>"]

[tool.poetry.dependencies]
python = "^3.8.1"
python-openstackclient = "^6.2.0"
python-glanceclient = "^4.4.0"
federation-registry = {git = "https://github.com/indigo-paas/federation-registry"}

[tool.poetry.dev-dependencies]
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Add rules on PyFlakes(F), pycodestyle (E,W), isort (I), 
# mccabe (C90) pep8-naming (N), pydocstyle (D), pyupgrade (UP), 
# ruff specific rules (RUF),
# flake8-bugbear (B), flake8-logging-format (G), flake8-quotes (Q)
extend-select = ["B", "C90", "E", "F", "G", "I", "N", "Q", "RUF", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"provider.py" = ["N805"]
"opnstk.py" = ["C901"]

[tool.ruff.lint.pydocstyle]
convention = "google"