[tool.poetry]
name = "federation-registry-feeder"
version = "0.1.0"
description = "Python script to populate the Federation-Registry app"
authors = ["Giovanni Savarese <giovanni.savarese@ba.infn.it>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
python-openstackclient = "^6.2.0"
python-glanceclient = "^4.4.0"
federation-registry = {git = "https://github.com/infn-datacloud/federation-registry.git", tag = "v1.0.0-beta.2"}
liboidcagent = "^0.6" # {git = "https://github.com/giosava94/liboidc-agent-py.git", branch = "local-and-remote" }
kafka-python = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.4"
pytest-cases = "^3.8.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Add rules on PyFlakes(F), pycodestyle (E,W), isort (I), 
# mccabe (C90) pep8-naming (N), pydocstyle (D), pyupgrade (UP), 
# ruff specific rules (RUF),
# flake8-bugbear (B), flake8-logging-format (G), flake8-quotes (Q)
extend-select = ["B", "C90", "E", "F", "G", "I", "N", "Q", "RUF", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"provider.py" = ["N805"]
"openstack.py" = ["C901"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
relative_files = true
source = ["src/"]
branch = true

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]